@@ -396,6 +396,7 @@ byte can_interface (void)
 				HANDLE_MSG (CAN_SET_BCAST_POLICY, CAN_SET_BCAST_POLICY_HANDLER)
 				HANDLE_MSG (CAN_GET_ERROR_STATUS, CAN_GET_ERROR_STATUS_HANDLER)
 				HANDLE_MSG (CAN_SET_VEL_SHIFT, CAN_SET_VEL_SHIFT_HANDLER)
+				HANDLE_MSG (CAN_SET_VEL_TIMEOUT, CAN_SET_VEL_TIMEOUT_HANDLER)
 				
 				HANDLE_MSG (CAN_SET_SMOOTH_PID, CAN_SET_SMOOTH_PID_HANDLER)
 				
