@@ -103,5 +103,8 @@ Added control for the receiving of the PID values before enabling the PWM.
 * Current build 30. maggia: BUILD NUMBER 30. TO BE TESTED. The target 1.28 and 1.30 do not enable the MAIS board. 
 In the struct canmsg_tag I have changed the CAN_data[16] in CAN_data[8]. I do not know why it was 16, since the data of a CAN message are at maximum 8.  
 
+2010-11-May  Francesco Nori <iron@liralab.it>
+* Current build 31. _vel_timeout is now passed via CAN on a separate message
+
  
 
